--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Projet bibliothèque en C (C99)
 cmake_minimum_required(VERSION 3.16)
 project(bibliotheque C)
 
@@ -5,8 +6,10 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
+# Dossier des headers
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+# Exécutable principal avec tous les fichiers sources
 add_executable(bibliotheque
         src/main.c
         src/livres.c
@@ -15,4 +18,6 @@ add_executable(bibliotheque
         src/fichiers.c
         src/stats.c
 )
+
+# Optionnel : définition pour le chemin du dossier data
 target_compile_definitions(bibliotheque PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data")
