--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Projet bibliothèque en C (C99)
 cmake_minimum_required(VERSION 3.16)
-project(bibliotheque C)
+project(bibliotheque_raylib C)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -8,6 +8,9 @@ set(CMAKE_C_EXTENSIONS OFF)
 
 # Dossier des headers
 include_directories(${CMAKE_SOURCE_DIR}/include)
+
+# === Chercher Raylib ===
+find_package(raylib REQUIRED)   # on utilise REQUIRED pour s'assurer que raylib est trouvé
 
 # Exécutable principal avec tous les fichiers sources
 add_executable(bibliotheque
@@ -19,5 +22,6 @@ add_executable(bibliotheque
         src/stats.c
 )
 
-# Optionnel : définition pour le chemin du dossier data
-target_compile_definitions(bibliotheque PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data")
+# Lier Raylib à ton exécutable
+target_link_libraries(bibliotheque raylib)
+
