feat(cmake): fetch raylib content

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,19 @@ set(CMAKE_C_EXTENSIONS OFF)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # === Chercher Raylib ===
-find_package(raylib REQUIRED)   # on utilise REQUIRED pour s'assurer que raylib est trouvé
+include(FetchContent)
+set(FETCHCONTENT_QUIET FALSE)
+set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
+set(BUILD_GAMES    OFF CACHE BOOL "" FORCE) # don't build the supplied example games
+
+FetchContent_Declare(
+        raylib
+        GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+        GIT_TAG "master"
+        GIT_PROGRESS TRUE
+)
+
+FetchContent_MakeAvailable(raylib)
 
 # Exécutable principal avec tous les fichiers sources
 add_executable(bibliotheque
@@ -24,6 +36,5 @@ add_executable(bibliotheque
 )
 
 # Lier Raylib à ton exécutable
-target_link_libraries(bibliotheque raylib)
-
+target_link_libraries(bibliotheque PRIVATE raylib)
 
